--- a/prioritycss.html
+++ b/prioritycss.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priority in CSS</title>
-    <link rel="stylesheet" href="/pwskills.css">
+    
     <style>
         body{
             background-color: white;
             color: grey;
         }
     </style>
+    <link rel="stylesheet" href="/pwskills.css">
 </head>
-<body style="background-color: red; color:yellow">
+<body>
     <!-- Priority in CSS -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ea.</p>
 </body>
