--- a/prioritycss.html
+++ b/prioritycss.html
@@ -12,6 +12,7 @@
             color: grey;
         }
     </style>
+    <!-- if external css is placed after internal in absence of inline then first internal will be fetched first and it will be replaced by external -->
     <link rel="stylesheet" href="/pwskills.css">
 </head>
 <body>
