--- a/boxmodel.html
+++ b/boxmodel.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            border: 11px solid red;
+            padding: 2px;
+            margin-top: 10px;
+
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Box Model</h1>
+    <div>Purushottam Singh</div>
 </body>
 </html>
