--- a/html/animation.html
+++ b/html/animation.html
@@ -10,6 +10,11 @@
 <body>
     <!-- Animation -->
     <Div></Div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores, amet!</p>
+    <Div id="ease">ease</Div>
+    <Div id="linear">linear</Div>
+    <Div id="ease-in">ease-in</Div>
+    <Div id="ease-out">ease-out</Div>
+
+    <p></p>
 </body>
 </html>
